# mono-repo-scaffold

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  bazel-bin  bazel-out  bazel-rob-mono-repo  bazel-testlogs  repomix-output.txt  requirements.in  requirements.txt
src/first_project/: BUILD.bazel  calculator.py  calculator_test.py
src/python_api/: BUILD.bazel  main.py
src/python_utils/torch/: BUILD.bazel  main.py
