module(name="rob-mono-repo", version="1.0.0")

#Python Rules
bazel_dep(name="rules_python", version="1.6.0")
bazel_dep(name="rules_uv", version="0.88.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version="3.13")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name="pip",
    python_version="3.13",
    requirements_lock="//:requirements.txt",
)
use_repo(pip, "pip")